# example-vault

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
src/: config.rs  contract.rs  describe.rs  handle.rs  lib.rs  msg.rs  state.rs
tests/: admin.rs  handle.rs  integration.rs  own.rs  ownership.rs  query.rs
tests/helpers/: helpers.rs  mod.rs  setup.rs
