[package]
authors      = ["shapeshed <go@margined.io>"]
categories   = ["wasm"]
description  = "Example implementation of Margined Vault"
edition      = "2021"
homepage     = "https://github.com/margined-protocol/example-vault"
keywords     = ["cosmos", "osmosis", "vault"]
license      = "MIT OR Apache-2.0"
name         = "example-vault"
publish      = false
readme       = "README.md"
repository   = "https://github.com/margined-protocol/example-vault"
resolver     = "2"
rust-version = "1.76.0"
version      = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = "2.0.0"
cosmwasm-std    = "1.5.3"
cw-storage-plus = "1.2.0"
cw-utils        = "1.0.3"
osmosis-std     = "0.22.0"
serde           = "1.0.197"
vaultenator     = { version = "0.0.1", git = "https://github.com/margined-protocol/vaultenator.git" }
# vaultenator = { version = "0.0.1", path = "../vaultenator" }

[dev-dependencies]
cw-vault-standard = "0.4.0"
osmosis-test-tube = { git = "https://github.com/osmosis-labs/test-tube.git" }
# osmosis-test-tube = "22.1.0"
