[package]
authors      = ["shapeshed <go@margined.io>"]
categories   = ["wasm"]
description  = "Example implementation using Vaultenator"
edition      = "2021"
homepage     = "https://github.com/margined-protocol/example-vault"
keywords     = ["cosmos", "osmosis", "vault", "vaultenator"]
license      = "MIT OR Apache-2.0"
name         = "example-vault"
publish      = false
readme       = "README.md"
repository   = "https://github.com/margined-protocol/example-vault"
resolver     = "2"
rust-version = "1.76.0"
version      = "0.0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = "2.0.0"
cosmwasm-std    = "1.5.3"
cw-controllers  = "1.1.2"
cw-storage-plus = "1.2.0"
cw-utils        = "1.0.3"
cw2             = "1.1.2"
osmosis-std     = "0.22.0"
serde           = "1.0.197"
serde_json      = "1.0.120"
vaultenator     = "0.0.3"

[dev-dependencies]
cw-vault-standard = "0.4.0"
osmosis-test-tube = "22.1.0"
